<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Intranet Saco Oliveros</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    
    <string name="pantalla2_etiqueta1">Medium Text</string>
    <string name="pantalla2_etiqueta2">Medium Text</string>
    
    <string name="pantalla2_boton1">Aceptar</string>
    <string name="pantalla2_boton2">Salir</string>

    
     
    <string name="string_empty"></string>
        
    <string name="pantalla1_lblNombresApellidos">Nombres y Apellidos</string>
    <string name="pantalla1_lblLocal">Local</string>
    <string name="pantalla1_lblCentro">Centro</string>
    <string name="pantalla1_lblTipoGrado">Tipo Grado</string>
    <string name="pantalla1_lblSeccion">Sección</string>
    <string name="pantalla1_lblCorreo">Correo</string>
    <string name="pantalla1_lblAula">Aula</string>
    <string name="pantalla1_lblTipoCentro">Tipo Centro</string>
    <string name="pantalla1_lblNivel">Nivel</string>
    <string name="pantalla1_lblGrado">Grado</string>
    <string name="pantalla1_lblTurno">Turno</string>
    
    <string name="pantalla1_boton1">Regresar</string>
    
    <string name="pantalla3_boton1">Consultar</string>
    
    <!-- Frm Menu -->
    
    <string name="main_boton1">Consultar Datos</string>    
    <string name="main_boton2">Consultar Notas</string> 
    <string name="main_boton3">Consultar Asistencia</string> 
    <string name="main_boton4">Consultar Simulacro</string> 
    <string name="main_boton0">Regresar</string>
    
    
    <!-- Frm Login -->
    <string name="frmlogin_etiqueta1">Usuario</string>
    <string name="frmlogin_etiqueta2">Contraseña</string>
    <string name="frmlogin_boton1">Ingresar</string>
    <string name="frmlogin_boton2">Salir</string>
    
    <!-- Frm Notas -->
    <string name="frmnota_lbltitulo">Datos del Alumno</string>
    <string name="frmnota_lblnombres">Nombres :</string>
    <string name="frmnota_lblapellidos">Apellidos :</string>
    <string name="frmnota_lbltitulo2">Notas</string>
    <string name="frmnota_lblperiodos">Periodos : </string>
    <string name="frmnota_lbltitulo3">Calificaciones</string>
    <string name="frmnota_lblperiodo">Periodo : </string>
     <!-- Frm Simulacros -->
    <string name="frmsimulacro_lbltitulo1">Simulacros</string>
    <string name="frmsimulacro_lbltitulo2">Listado de Simulacros</string>
    <string name="frmsimulacro_lblsimulacro">Simulacro :</string>
    <string name="frmSimulacroItem_puntaje">Puntaje:</string>
    <string name="frmSimulacroItem_simulacro">Simulacro:</string>
    
</resources>
