<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/main_boton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_boton1"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
     
    <Button
        android:id="@+id/main_boton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_boton2"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
    
    <Button
        android:id="@+id/main_boton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_boton3"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
    
    <Button
        android:id="@+id/main_boton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_boton4"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
    
    <Button
        android:id="@+id/main_boton0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_boton0"
        android:textAppearance="?android:attr/textAppearanceSmall"/>
    
    
</LinearLayout>
