<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frmnota_lbltitulo"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_empty"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
             <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frmnota_lblnombres"
            android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/frmSimulacros_txtNombres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_empty"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
              <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frmnota_lblapellidos"
            android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/frmSimulacros_txtApellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_empty"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
        
    </LinearLayout>

	<TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_empty"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frmsimulacro_lbltitulo1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frmsimulacro_lbltitulo2"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    
    <ListView
        android:id="@+id/frmSimulacros_lstSimulacros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <Button
        android:id="@+id/frmSimulacros_btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pantalla1_boton1" />
</LinearLayout>
