<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/frmlogin_etiqueta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frmlogin_etiqueta1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/frmlogin_textbox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </EditText>
    
    <TextView
        android:id="@+id/frmlogin_etiqueta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frmlogin_etiqueta2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/frmlogin_textbox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="textPersonName"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

	    <Button
	        android:id="@+id/frmlogin_boton1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/frmlogin_boton1">
	    </Button>    
	    
	    <Button
	        android:id="@+id/frmlogin_boton2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/frmlogin_boton2">
	    </Button>        
        
    </LinearLayout>
    
</LinearLayout>
